# kb-embedded-jvm

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.clwb/: .bazelproject
jvm-examples/java-gradle-example/: build.gradle.kts  settings.gradle.kts
jvm-examples/java-gradle-example/gradle/wrapper/: gradle-wrapper.properties
jvm-examples/java-gradle-example/src/main/java/com/kablunk/KbJavaExample/: Main.java
kb-cppbuild/: BUILD.bazel
kb-cppbuild/include/kablunk/cppbuild/: kb_cpp_build.h
kb-jvm/: BUILD.bazel
kb-jvm/include/kablunk/core/: core.h
kb-jvm/scripts/: build-kb-cppbuild-for-kb-jvm.sh  get-vendors.sh
kb-jvm/src/kablunk/: kb_jvm_build.cpp
kb-jvm/src/kablunk/kb-jvm/: kb_jvm_entrypoint.cpp
